bug: Make toolbar section more readable

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,24 +48,22 @@ h1 {
     border-color: #fff;
     border-radius: 10px;
     background-color: #187818;
-    display: flex;
+    text-align: center;
     align-items: center;
     justify-content: center;
     text-shadow: 2px 2px 4px #000;
     box-shadow: 2px 2px 4px #000;
+    line-height: 7px;
 }
 
 .timer,
 .clicks,
 .rating,
 .restart {
-    width: 44px;
-    font-size: 65%;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 7px;
+    width: 53px;
+    padding-top: 25px;
+    font-size: 0.8em;
     background-color: transparent;/*fit buttons within toolbar*/
-    white-space: nowrap;/*helps stars not to wrap in a single line*/
 }
 
 span {
@@ -78,10 +76,10 @@ span {
 
 .restart {
     border-radius: 10px;
-    white-space: unset;
     color: #fff;
     width: 58px;
-    margin-right: -11px;
+    margin-right: -9px;
+    padding-top: 16px;
 }
 
 .deck {
